static/src/docs/css/nav.css
/** Nav **/

.nav {
    font-size: 0.8em;
    padding-top: 10px;
}
.nav>ul{
    list-style: none;
    margin: 0;
    padding: 0;
}
.nav-header {
    font-size: 1.2em;
    color: #343434;
    padding: 0;
    font-weight: 700;
}

.category-selected {
    color: #5bc894;
}
.page-list {
    list-style: none;
    padding: 0;
    margin-left: 4px;
    border-left: 1px solid #5bc894;
}
.page-list li {
    padding-top: 10px;
    padding-left: 10px;    
}
.page-list li a  {
    margin-top:10px;    
    text-decoration: none;
    color: #343434;    
    font-weight: 400;
    
}
 .page-selected {
    color: #5bc894 !important;
    font-weight: 700 !important;
}

/* end Nav*/
label{
  padding-left: 10px;
  padding-top: 10px;
  padding-right: 10px;
  padding-bottom: 0;
}

input[type="checkbox"]{
  position: absolute;
  left: -9999px;
}

input[type="checkbox"] ~ ul{
  height: 0;
  transform: scaleY(0);
}

input[type="checkbox"]:checked ~ ul{
  height: 100%;
  transform-origin: top;
  transition: transform .2s ease-out;
  transform: scaleY(1); 
}


/** chevron **/

.show-menu {
    font-weight: normal;
    padding: 10px;

    border-radius: 4px;
    box-shadow: 0px 0px 8px #3636362f;

}

.show-menu:hover {
    border: 1px solid #5bc894;    
}
.chevron-down {
    display: inline-block;
    border: solid #5bc894;
    border-width: 0 2px 2px 0;
    padding: 2px;
    margin-left: 4px;
    margin-bottom: 2px;
    transition: transform 0.2s ease,margin-bottom 0.2s ease;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
}
/** collapsable **/

#collapsed-nav {
    display: none;
    margin-left: 20px;
}

/*Show menu when invisible checkbox is checked*/
input[type="checkbox"]:checked ~ #navigation {
    display: inline;
}


/*Responsive Styles*/
@media screen and (max-width : 760px){
    #navigation {
        margin-top: 20px;            
        grid-column: span 10;
        display: none;
    }

    #content {
        padding-left: 20px;
        margin-right: 0px;
        max-width: none;  
        grid-column: span 10;
    }

    #collapsed-nav {
        display: inline;
    }
}

